Fix header bar text vertical alignment

--- a/src/style.css
+++ b/src/style.css
@@ -952,8 +952,6 @@ div.custom-logo a {
 
 .header-text {
 	display: block;
-	margin-bottom: 22px;
-	margin-bottom: 2.2rem;
 	font-size: 13px;
 	font-size: 1.3rem;
 	text-align: center;
@@ -962,15 +960,13 @@ div.custom-logo a {
 @media screen and (min-width: 1100px) {
 	.header-text {
 		float: left;
-		margin-top: 2px;
-		margin-top: 0.2rem;
-		padding: 11px 0;
-		padding: 1.1rem 0;
 	}
 }
 
 @media screen and (min-width: 800px) {
 	.header-text {
+		padding: 11px 0;
+		padding: 1.1rem 0;
 		text-align: left;
 	}
 }
